Deploy Fixes For Doctor and Patient Management Classes

--- a/HospitalManagement/Views/DoctorViews/DoctorManagement.xaml
+++ b/HospitalManagement/Views/DoctorViews/DoctorManagement.xaml
@@ -71,7 +71,8 @@
             <ListView
                 x:Name="listView_Main"
                 FontFamily="Bahnschrift SemiBold SemiCondensed" 
-                Background="FloralWhite">
+                Background="FloralWhite"
+                MouseDoubleClick="listView_Main_MouseDoubleClick">
                 <ListView.View>
                     <GridView 
                     AllowsColumnReorder="False">
